versioned_docs/version-4.0/client-api/how-to/content/_setup-aggressive-caching-csharp.mdx
import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';

## Standard Cache Configuration

The RavenDB client provides a caching mechanism out of the box. The default caching configuration is to cache all requests.

The size of cache can be configured by changing [`MaxHttpCacheSize` convention](../../../client-api/configuration/conventions.mdx#maxhttpcachesize).

The client utilizes the notion of the `304 Not Modified` server's response and will serve the data from the cache if available.

## Aggressive Mode

The aggressive caching feature goes even further. Enabling it means that the client doesn't need to ask the server. It will simply return the response directly from a local cache without any usage of `304 Not Modified` status. 
Results will be returned very fast. 

Here's how it works: The client subscribes to [server notifications](../../changes/what-is-changes-api.mdx). By taking advantage of them, he is able to invalidate cached documents when they are changed.
The client knows when it can serve the response from the cache, and when it has to send the request to get the up-to-date result. 

<Admonition type="warning" title="Important" id="important" href="#important">
Despite the fact that the aggressive cache uses the notifications to invalidate the cache, it is still possible to get stale data because of the time needed to receive the notification from the server.
</Admonition>

We can activate this mode globally from the store or per session.

To activate this mode globally from the store we just need to add one of the following lines:

<TabItem value="aggressive_cache_global" label="aggressive_cache_global">
<CodeBlock language="csharp">
{`documentStore.AggressivelyCacheFor(TimeSpan.FromMinutes(5));

documentStore.AggressivelyCache(); // Defines the cache duration for 1 day
`}
</CodeBlock>
</TabItem>

If we want to activate this mode only in the session we need to add this in the session:

<TabItem value="aggressive_cache_load" label="aggressive_cache_load">
<CodeBlock language="csharp">
{`using (session.Advanced.DocumentStore.AggressivelyCacheFor(TimeSpan.FromMinutes(5)))
\{
    Order user = session.Load<Order>("orders/1");
\}
`}
</CodeBlock>
</TabItem>

If there is a value in the cache for `orders/1` that is at most 5 minutes old and we haven't got any change notification about it, we can directly return it. The same mechanism works on queries as well:

<TabItem value="aggressive_cache_query" label="aggressive_cache_query">
<CodeBlock language="csharp">
{`using (session.Advanced.DocumentStore.AggressivelyCacheFor(TimeSpan.FromMinutes(5)))
\{
    List<Order> users = session.Query<Order>().ToList();
\}
`}
</CodeBlock>
</TabItem>

The usage of the notification system means that you can set an aggressive cache duration to a longer period. The document store exposes the method:

<TabItem value="aggressive_cache_for_one_day_1" label="aggressive_cache_for_one_day_1">
<CodeBlock language="csharp">
{`using (session.Advanced.DocumentStore.AggressivelyCache())
\{ \}
`}
</CodeBlock>
</TabItem>

which is equivalent to:

<TabItem value="aggressive_cache_for_one_day_2" label="aggressive_cache_for_one_day_2">
<CodeBlock language="csharp">
{`using (session.Advanced.DocumentStore.AggressivelyCacheFor(TimeSpan.FromDays(1)))
\{ \}
`}
</CodeBlock>
</TabItem>

### Disable Aggressive Mode

We can disable the aggressive mode by simply using `documentStore.DisableAggressiveCaching()`. In that way we will disable the aggressive caching 
globally in the store. But what if we need to disable the aggressive caching only for a specific call, or to manually update the cache, just like before we can use `DisableAggressiveCaching()`
per session?

<TabItem value="disable_aggressive_cache" label="disable_aggressive_cache">
<CodeBlock language="csharp">
{`using (session.Advanced.DocumentStore.DisableAggressiveCaching())
\{
    Order user = session.Load<Order>("orders/1");
\}
`}
</CodeBlock>
</TabItem>

